--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
 
   </header>
   <main>
-    <section class="container">
-      <img id="banner" src="assents/banner.png" alt="">
+    
+    <section class="container section-banner">
+
+    <div class="banner">
+           
+    </div>
+
     </section>
   </main>
   <footer></footer>
